Fixup footer spacing

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -41,6 +41,9 @@ article#left_logo
       font-weight: 600
       font-size: 19px
 
+.footer-spacing
+  height: 30px
+
 footer
   height: 30px
   position: absolute
@@ -151,9 +154,6 @@ section#marketing
     li
       display: block
       padding-bottom: 15px
-
-.footer_spacing
-  height: 60px
 
 code, pre
   font-family: "Monaco", "Consolas", "Ubuntu Mono", monospace
